renomear paginas, adicionar opção na exploracao de dados

--- a/exploracao_de_dados.ipynb
+++ b/exploracao_de_dados.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "e83554b5",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "1ff71fe6",
    "metadata": {},
    "outputs": [
@@ -243,19 +243,19 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_credit = pd.read_csv('corporating_credit_data/corporate_rating_train.csv')\n",
+    "df_credit = pd.read_csv('data/corporate_rating_train.csv')\n",
     "df_credit.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "c559f067",
    "metadata": {},
    "outputs": [],
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "33687334",
    "metadata": {},
    "outputs": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "06de4b21",
    "metadata": {},
    "outputs": [
@@ -684,7 +684,7 @@
        "max                     688.526591      20314.880400  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "c8f81297",
    "metadata": {},
    "outputs": [
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "e6cc39d3",
    "metadata": {},
    "outputs": [
@@ -756,7 +756,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "6ece068f",
    "metadata": {},
    "outputs": [
@@ -3273,7 +3273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "ae7e331d",
    "metadata": {},
    "outputs": [
@@ -4269,7 +4269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "de99bfa6",
    "metadata": {},
    "outputs": [
@@ -6790,7 +6790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "59ea3cfc",
    "metadata": {},
    "outputs": [
@@ -6812,7 +6812,7 @@
        "Name: Date, Length: 557, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6823,7 +6823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "f3325107",
    "metadata": {},
    "outputs": [
@@ -6839,13 +6839,13 @@
          "name": "Rating",
          "type": "scatter",
          "x": [
-          "11/29/2016",
-          "11/8/2013",
-          "8/15/2014",
-          "4/9/2013",
-          "4/27/2011",
-          "11/27/2015",
-          "4/23/2012"
+          "2016-11-29T00:00:00.000000000",
+          "2013-11-08T00:00:00.000000000",
+          "2014-08-15T00:00:00.000000000",
+          "2013-04-09T00:00:00.000000000",
+          "2011-04-27T00:00:00.000000000",
+          "2015-11-27T00:00:00.000000000",
+          "2012-04-23T00:00:00.000000000"
          ],
          "xaxis": "x",
          "y": [
@@ -6864,13 +6864,13 @@
          "name": "grossProfitMargin",
          "type": "scatter",
          "x": [
-          "11/29/2016",
-          "11/8/2013",
-          "8/15/2014",
-          "4/9/2013",
-          "4/27/2011",
-          "11/27/2015",
-          "4/23/2012"
+          "2016-11-29T00:00:00.000000000",
+          "2013-11-08T00:00:00.000000000",
+          "2014-08-15T00:00:00.000000000",
+          "2013-04-09T00:00:00.000000000",
+          "2011-04-27T00:00:00.000000000",
+          "2015-11-27T00:00:00.000000000",
+          "2012-04-23T00:00:00.000000000"
          ],
          "xaxis": "x2",
          "y": {
@@ -7721,6 +7721,8 @@
     }
    ],
    "source": [
+    "df_credit[\"Date\"] = pd.to_datetime(df_credit[\"Date\"])\n",
+    "company_df = df_credit.sort_values(\"Date\")\n",
     "# Plot de pontos usando plotly como uma empresa específica tem o seu rating e net profit ao longo do tempo\n",
     "fig = make_subplots(\n",
     "    rows=2, cols=1,\n",
@@ -7751,7 +7753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "aa947473",
    "metadata": {},
    "outputs": [],
@@ -7775,7 +7777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "d46c857f",
    "metadata": {},
    "outputs": [
