--- a/regras_financeiras.ipynb
+++ b/regras_financeiras.ipynb
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "id": "53215b14",
    "metadata": {},
    "outputs": [],
@@ -1149,16 +1149,15 @@
     "    \"Name\": df_credit[\"Name\"],\n",
     "    \"Rating\": df_credit[\"Rating\"],\n",
     "    \"Financial Health Score\": df_credit[\"financial_health_score\"],\n",
-    "    \"ML Risk Probability\": df_credit[\"risk_probability\"],\n",
     "    \"Rule Flags\": df_credit[\"rule_flags\"],\n",
-    "    \"Final Risk Score\": df_credit[\"final_risk_score\"],\n",
-    "    \"Risk Bucket\": df_credit[\"risk_bucket\"],\n",
+    "    \"ML Risk Probability\": df_credit[\"risk_probability\"],\n",
+    "    \"Risk Bucket\": df_credit[\"risk_bucket\"]\n",
     "})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "062a14fd",
    "metadata": {},
    "outputs": [
@@ -1186,9 +1185,8 @@
        "      <th>Name</th>\n",
        "      <th>Rating</th>\n",
        "      <th>Financial Health Score</th>\n",
-       "      <th>ML Risk Probability</th>\n",
        "      <th>Rule Flags</th>\n",
-       "      <th>Final Risk Score</th>\n",
+       "      <th>ML Risk Probability</th>\n",
        "      <th>Risk Bucket</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1198,7 +1196,6 @@
        "      <td>RPM International Inc.</td>\n",
        "      <td>BBB</td>\n",
        "      <td>0.480855</td>\n",
-       "      <td>0.015164</td>\n",
        "      <td>1</td>\n",
        "      <td>0.015164</td>\n",
        "      <td>Low</td>\n",
@@ -1208,7 +1205,6 @@
        "      <td>Broadcom Inc.</td>\n",
        "      <td>A</td>\n",
        "      <td>1.504083</td>\n",
-       "      <td>0.009324</td>\n",
        "      <td>0</td>\n",
        "      <td>0.009324</td>\n",
        "      <td>Low</td>\n",
@@ -1218,7 +1214,6 @@
        "      <td>Tenneco Inc.</td>\n",
        "      <td>BBB</td>\n",
        "      <td>0.727342</td>\n",
-       "      <td>0.031046</td>\n",
        "      <td>2</td>\n",
        "      <td>0.031046</td>\n",
        "      <td>Low</td>\n",
@@ -1228,7 +1223,6 @@
        "      <td>Dover Corporation</td>\n",
        "      <td>A</td>\n",
        "      <td>1.310062</td>\n",
-       "      <td>0.000382</td>\n",
        "      <td>2</td>\n",
        "      <td>0.000382</td>\n",
        "      <td>Low</td>\n",
@@ -1238,7 +1232,6 @@
        "      <td>Briggs &amp; Stratton Corporation</td>\n",
        "      <td>BB</td>\n",
        "      <td>0.736496</td>\n",
-       "      <td>0.002821</td>\n",
        "      <td>1</td>\n",
        "      <td>0.002821</td>\n",
        "      <td>Low</td>\n",
@@ -1248,22 +1241,22 @@
        "</div>"
       ],
       "text/plain": [
-       "                            Name Rating  Financial Health Score  \\\n",
-       "0         RPM International Inc.    BBB                0.480855   \n",
-       "1                  Broadcom Inc.      A                1.504083   \n",
-       "2                   Tenneco Inc.    BBB                0.727342   \n",
-       "3              Dover Corporation      A                1.310062   \n",
-       "4  Briggs & Stratton Corporation     BB                0.736496   \n",
+       "                            Name Rating  Financial Health Score  Rule Flags  \\\n",
+       "0         RPM International Inc.    BBB                0.480855           1   \n",
+       "1                  Broadcom Inc.      A                1.504083           0   \n",
+       "2                   Tenneco Inc.    BBB                0.727342           2   \n",
+       "3              Dover Corporation      A                1.310062           2   \n",
+       "4  Briggs & Stratton Corporation     BB                0.736496           1   \n",
        "\n",
-       "   ML Risk Probability  Rule Flags  Final Risk Score Risk Bucket  \n",
-       "0             0.015164           1          0.015164         Low  \n",
-       "1             0.009324           0          0.009324         Low  \n",
-       "2             0.031046           2          0.031046         Low  \n",
-       "3             0.000382           2          0.000382         Low  \n",
-       "4             0.002821           1          0.002821         Low  "
+       "   ML Risk Probability Risk Bucket  \n",
+       "0             0.015164         Low  \n",
+       "1             0.009324         Low  \n",
+       "2             0.031046         Low  \n",
+       "3             0.000382         Low  \n",
+       "4             0.002821         Low  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1274,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "7249ce8e",
    "metadata": {},
    "outputs": [
@@ -1302,9 +1295,8 @@
        "      <th>Name</th>\n",
        "      <th>Rating</th>\n",
        "      <th>Financial Health Score</th>\n",
-       "      <th>ML Risk Probability</th>\n",
        "      <th>Rule Flags</th>\n",
-       "      <th>Final Risk Score</th>\n",
+       "      <th>ML Risk Probability</th>\n",
        "      <th>Risk Bucket</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1314,7 +1306,6 @@
        "      <td>Caesars Entertainment Corporation</td>\n",
        "      <td>C</td>\n",
        "      <td>-1.268675</td>\n",
-       "      <td>0.846576</td>\n",
        "      <td>3</td>\n",
        "      <td>0.846576</td>\n",
        "      <td>High</td>\n",
@@ -1324,7 +1315,6 @@
        "      <td>Cleveland-Cliffs Inc.</td>\n",
        "      <td>C</td>\n",
        "      <td>0.208304</td>\n",
-       "      <td>0.971439</td>\n",
        "      <td>3</td>\n",
        "      <td>0.971439</td>\n",
        "      <td>High</td>\n",
@@ -1338,12 +1328,12 @@
        "245  Caesars Entertainment Corporation      C               -1.268675   \n",
        "313              Cleveland-Cliffs Inc.      C                0.208304   \n",
        "\n",
-       "     ML Risk Probability  Rule Flags  Final Risk Score Risk Bucket  \n",
-       "245             0.846576           3          0.846576        High  \n",
-       "313             0.971439           3          0.971439        High  "
+       "     Rule Flags  ML Risk Probability Risk Bucket  \n",
+       "245           3             0.846576        High  \n",
+       "313           3             0.971439        High  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
